[metadata]
# replace with your username:
name = gpt2chinesedemo
version = 0.0.1
author = Morizeyao
author_email = ned1991@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Morizeyao/GPT2-Chinese
project_urls =
    Bug Tracker = https://github.com/Morizeyao/GPT2-Chinese/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pytorch-lightning>=1.2.2
    transformers>=4.2.1
    torch==1.8.1
    tqdm==4.56.0

[options.packages.find]
where = src
